# Fire-Detection

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
fire_detection/: __init__.py  dataset.py  features.py  plots.py
fire_detection/modeling/: predict.py  train.py
notebooks/: data_processing.ipynb  demo.ipynb
